Stats correctly displayed with white spacing.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@
 }
 
 .stats {
-  margin-top: 2em;
+  margin-top: 3em;
+  margin-bottom: 2em;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
