--- a/styles/_stats.scss
+++ b/styles/_stats.scss
@@ -1,5 +1,6 @@
 .stats {
-    margin-top: 2em;
+    margin-top: 3em;
+    margin-bottom: 2em;
     list-style: none;
 
     display: flex;
